# work

./: omninames-zerounit.bak
classes/: Adc.cpp  Clcd.cpp  GetDatetimeString.cpp  HumidityTemperature.cpp  HumidityTemperature.h  Illumination_ex.cpp  OneWire.cpp  OneWire.h  Pressure.cpp  Split.cpp  Uart.cpp
classes/tests/Adc/: CMakeLists.txt
classes/tests/Clcd/: ClcdTests.cpp
classes/tests/HumidityTemperature/: CMakeLists.txt  HumidityTemperatureTests.cpp
classes/tests/HumidityTemperature2/: HumidityTemperatureTests.cpp
classes/tests/Pressure/: PressureTests.cpp
classes/tests/Uart/: UartTests.cpp
device_exercises/: simple_device_access.cpp  simple_device_access.cpp_org  simple_device_access_1wire  simple_device_access_1wire.cpp  simple_device_access_1wire_org.cpp  simple_device_access_1wire_org.py  simple_device_access_1wire_search.cpp  simple_device_access_acc.cpp  simple_device_access_acc_org.cpp  simple_device_access_acc_org.py  simple_device_access_org.cpp  simple_device_access_org2.cpp  simple_device_access_uart  simple_device_access_uart.cpp  simple_device_access_uart_org.cpp
first_demo/: first_demo.cpp
rtcs/: omninames-zerounit.bak
rtcs/AccelerometerRTC/: .project  AccelerometerRTC.conf  CMakeLists.txt  RTC.xml  RTC.xml20160801010310  cmake_clean.sh
rtcs/AccelerometerRTC/cmake/: Makefile  accelerometerrtc-config.cmake.in  accelerometerrtc.pc  cmake_install.cmake  wix.xsl.in
rtcs/AccelerometerRTC/doc/: conf.py.in
rtcs/AccelerometerRTC/idl/: BasicDataTypeSkel.cpp  BasicDataTypeSkel.h  BasicDataTypeStub.cpp  BasicDataTypeStub.h  Makefile  cmake_install.cmake
rtcs/AccelerometerRTC/include/: Makefile  cmake_install.cmake
rtcs/AccelerometerRTC/src/: AccelerometerRTC.cpp  AccelerometerRTCComp.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
rtcs/BarometerRTC/: CMakeLists.txt  RTC.xml20160728183036  omninames-zerounit.ckp  rtc.conf
rtcs/BarometerRTC/doc/: conf.py.in
rtcs/BarometerRTC/include/BarometerRTC/: BarometerRTC.h  CMakeLists.txt
rtcs/BarometerRTC/src/: BarometerRTC.cpp  CMakeLists.txt
rtcs/CLCDRTC/: .project  CLCDRTC.conf  RTC.xml20160801010823
rtcs/CLCDRTC/cmake/: clcdrtc-config.cmake.in  wix.xsl.in
rtcs/CLCDRTC/include/: CMakeLists.txt
rtcs/CLCDRTC/src/: CLCDRTCComp.cpp  CMakeLists.txt
rtcs/CollectDataRTC/: CollectDataRTC.py  RTC.xml  Seminar Project-6618d04ae42a.json  testdata.txt
rtcs/CollectDataRTC/idl/: CMakeLists.txt
rtcs/GPSRTC/: .project  CMakeLists.txt  rtc.conf
rtcs/GPSRTC/cmake/: gpsrtc-config.cmake.in
rtcs/GPSRTC/include/: CMakeLists.txt
rtcs/GPSRTC/src/: CMakeLists.txt  GPSRTC.cpp  GPSRTCComp.cpp
rtcs/GoogleApiRTC/: .project  GoogleApiRTC.conf  GoogleApiRTC.py  README.GooglApiRTC  idlcompile.sh  iot-summer-c1652295662e.json  rtc.conf
rtcs/HumidityRTC/: CMakeLists.txt  README.HumidityRTC  rtc.conf
rtcs/HumidityRTC/doc/: conf.py.in
rtcs/HumidityRTC/include/: CMakeLists.txt
rtcs/HumidityRTC/src/: CMakeLists.txt  HumidityRTCComp.cpp
rtcs/IlluminationRTC/: .project  CMakeLists.txt  IlluminationRTC.conf  README.IlluminationRTC  RTC.xml  RTC.xml20160801005049  rtc.conf
rtcs/IlluminationRTC/idl/: CMakeLists.txt
rtcs/IlluminationRTC/include/: CMakeLists.txt
rtcs/IlluminationRTC/src/: CMakeLists.txt  IlluminationRTC.cpp  IlluminationRTCComp.cpp
rtcs/TemperatureRTC/: CMakeLists.txt  TemperatureRTC.conf  rtc.conf
rtcs/TemperatureRTC/src/: CMakeLists.txt  TemperatureRTC.cpp
rtcs/Test0001/: .project  CMakeLists.txt  RTC.xml20160729163038  rtc.conf
rtcs/Test0001/doc/: conf.py.in
rtcs/Test0001/include/: CMakeLists.txt
rtcs/ViaNetworkRTC/: omninames-zerounit.bak
rtcs/ViaNetworkRTC/doc/: conf.py.in
rtcs/backup/: My Project 1-ee3a4064b9e6.json  RTC.xml20160801011058  newproject-1-6f8d8d9e6dc4.json
rtcs/backup/cpack_resources/: wix.xsl.in
src/: omninames-zerounit.bak
src/classes/: Accelerometer.cpp  Accelerometer.h  HumidityTemperature.cpp  HumidityTemperature.h  HumidityTemperature2.cpp  HumidityTemperature2.h  Illumination.cpp  Illumination_org2.cpp  OneWire.cpp  Pressure.cpp  Task.cpp  Uart.cpp
src/classes/tests/Accelerometer/: AccelerometerTests.cpp  CMakeLists.txt
src/classes/tests/Clcd/: CMakeLists.txt
src/classes/tests/Illumination/: CMakeLists.txt  IlluminationTests.cpp
src/classes/tests/Pressure/: CMakeLists.txt
src/classes/tests/Uart/: CMakeLists.txt  UartTests.cpp
src/classes/tests/oneWire/: CMakeLists.txt  OneWireTests.cpp
src/rtcs/: CMakeLists.txt  omninames-zerounit.bak
src/rtcs/AccelerometerRTC/: CMakeLists.txt  README.AccelerometerRTC  rtc.conf
src/rtcs/BarometerRTC/: .project  BarometerRTC.conf  CMakeLists.txt  README.BarometerRTC  RTC.xml
src/rtcs/BarometerRTC/include/BarometerRTC/: CMakeLists.txt  Task.h
src/rtcs/CLCDRTC/: CMakeLists.txt  README.CLCDRTC  RTC.xml  rtc.conf
src/rtcs/CollectDataRTC/: CollectDataRTC.py  README.GooglApiRTC  testdata.txt
src/rtcs/GPSRTC/: CMakeLists.txt  GPSRTC.conf  README.GPSRTC  RTC.xml  RTC.xml20160801010543  rtc.conf
src/rtcs/GoogleApiRTC/: GoogleApiRTC.py  GoogleApiRTC_1_5_2.py  iotsemi1612-695af2de0f12.json  iotseminar-ef7d285054b5.json  rtc.conf
src/rtcs/HumidityRTC/: .project  CMakeLists.txt  HumidityRTC.conf  RTC.xml  RTC.xml20160801005629
src/rtcs/IlluminationRTC/: CMakeLists.txt  omninames-zerounit.bak
src/rtcs/TemperatureRTC/: .project  CMakeLists.txt  README.TemperatureRTC  RTC.xml  RTC.xml20160801005858  rtc.conf
src/rtcs/Test0001/: README.Test0001  RTC.xml  Test0001.conf  omninames-zerounit.bak
src/rtcs/ViaNetworkRTC/: CMakeLists.txt  ViaNetworkRTC.conf  ViaNetworkRTC.py  rtc.conf  (+3 more)
tests/: My Project 74140-20278a19f400.json  client_id.json  googleapi_test.py  googleapi_test001.py  googleapi_test002.py  googleapi_test003.py  googleapi_testread.py  googleapi_testread_prior200.py  googleapi_testwrite.py  googleapi_testwrite_prior200.py  initGoogleApi.py  initGoogleApi.sh  iotsemi1612-105e34905c61.json  iotseminar-3df2d7109825.json  omninames-zerounit.bak  shizu-241851f95630.json  spreadsheetid.txt
tools/: ConsoleOutString.py  omninames-zerounit.bak  rtc.conf  system_test.sh  tests.sh
(+95 files in other folders)
